Remove some console warnings